WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124967
[GTK] GTK2 paint code path does not render AC layers
https://bugs.webkit.org/show_bug.cgi?id=124967
Summary
[GTK] GTK2 paint code path does not render AC layers
Gustavo Noronha (kov)
Reported
2013-11-28 05:39:43 PST
[GTK] GTK2 paint code path does not render AC layers
Attachments
Patch
(1.91 KB, patch)
2013-11-28 05:40 PST
,
Gustavo Noronha (kov)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gustavo Noronha (kov)
Comment 1
2013-11-28 05:40:32 PST
Created
attachment 217993
[details]
Patch
Carlos Garcia Campos
Comment 2
2013-12-02 01:06:26 PST
Comment on
attachment 217993
[details]
Patch Looks good, thanks!
Gustavo Noronha (kov)
Comment 3
2013-12-02 02:42:13 PST
Comment on
attachment 217993
[details]
Patch Clearing flags on attachment: 217993 Committed
r159926
: <
http://trac.webkit.org/changeset/159926
>
Gustavo Noronha (kov)
Comment 4
2013-12-02 02:42:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug