[GTK] GTK2 paint code path does not render AC layers https://bugs.webkit.org/show_bug.cgi?id=124967

Patch by Gustavo Noronha Silva <gustavo.noronha@collabora.com> on 2013-12-02
Reviewed by Carlos Garcia Campos.

* webkit/webkitwebview.cpp:
(webkit_web_view_expose_event): also paint AC layers when painting the widget,
when AC is on.

Canonical link: https://commits.webkit.org/143170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159926 268f45cc-cd09-0410-ab3c-d52691b4dbfc